--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "jquery": "^1.11.0",
     "rxjs": "^5.1.0",
+    "scrollmagic": "^2.0.5",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
