--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "jquery": "^1.11.0",
+    "moment": "^2.18.1",
+    "ngx-pipes": "^1.6.1",
     "rxjs": "^5.1.0",
     "scrollmagic": "^2.0.5",
     "zone.js": "^0.8.4"
