--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ngx-pipes": "^1.6.1",
     "rxjs": "^5.1.0",
     "scrollmagic": "^2.0.5",
+    "slick-carousel": "^1.6.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
