--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "jquery": "^1.11.0",
     "moment": "^2.18.1",
+    "ng2-youtube-player": "0.0.3",
     "ngx-pipes": "^1.6.1",
     "rxjs": "^5.1.0",
     "scrollmagic": "^2.0.5",
