--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/youtube": "0.0.30",
     "core-js": "^2.4.1",
     "jquery": "^1.11.0",
     "moment": "^2.18.1",
