--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "jquery": "^1.11.0",
     "moment": "^2.18.1",
+    "ng2-device-detector": "^1.0.0",
     "ng2-youtube-player": "0.0.3",
     "ngx-pipes": "^1.6.1",
     "rxjs": "^5.1.0",
