--- a/api/public/.htaccess
+++ b/api/public/.htaccess
@@ -9,5 +9,7 @@ php_value max_execution_time 600
 php_value max_input_time 600
 php_value date.timezone 'Asia/Seoul'
 
+Header set Access-Control-Allow-Origin "*"
+
 php_value error_reporting 22527
 php_flag display_errors on
